fixed mobile menu overflow

--- a/src/less/style/_nav.less
+++ b/src/less/style/_nav.less
@@ -198,3 +198,7 @@
 		padding-left: 15px;
 	}
 }
+
+.navbar-collapse {
+	overflow: hidden;
+}
