--- a/src/less/style/_styleguide.less
+++ b/src/less/style/_styleguide.less
@@ -1,4 +1,9 @@
 body {
+
+.overflow {
+	overflow: hidden;
+}
+
 	color: #2C2D30;
 }
 
